[gd_scene load_steps=4 format=2]

[ext_resource path="res://TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/caviar_dreams/CaviarDreams_Bold.tres" type="DynamicFont" id=2]
[ext_resource path="res://tex/title_image.png" type="Texture" id=3]

[node name="TitleScreen" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -185.0
margin_right = 205.0
margin_bottom = 185.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_top = 2.0
margin_right = 410.0
margin_bottom = 367.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 403.0
margin_bottom = 358.0

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_right = 396.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
text = "Empty Rooms"

[node name="TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 396.0
margin_bottom = 246.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 396.0
margin_bottom = 333.0
custom_constants/separation = 32
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 115.0
margin_bottom = 83.0

[node name="Start" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 41.0
margin_bottom = 20.0
text = "Start"

[node name="Exit" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 41.0
margin_bottom = 44.0
text = "Exit"

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 147.0
margin_right = 321.0
margin_bottom = 83.0

[node name="ControlsTitle" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 174.0
margin_bottom = 14.0
text = "Controls"
align = 1

[node name="Controls" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 174.0
margin_bottom = 83.0
text = "WASD: movement
Q/E: cycle inventory
F: try placing selected item
ESC: open the menu"

[node name="Copyright" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 337.0
margin_right = 396.0
margin_bottom = 351.0
text = "Â© 2019 Pizzasgood"
align = 2
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
